[build-system]
requires = ["scikit-build-core>=0.10", "numpy", "pytest"]
build-backend = "scikit_build_core.build"


[project]
name = "pydynamo"
version = "0.0.1"
description="A python package for DynamO, a particle dynamics simulator"
readme = "Readme.md"
authors = [
  { name = "Marcus Bannerman", email = "m.bannerman@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GPL License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["alive-progress", "pandas", "scipy", "uncertainties", "networkx"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"


#[project.optional-dependencies]
#test = ["pytest"]

#[tool.pytest.ini_options]
#minversion = "8.0"
#addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
#xfail_strict = true
#log_cli_level = "INFO"
#filterwarnings = [
#  "error",
#  "ignore::pytest.PytestCacheWarning",
#]
#testpaths = ["tests"]
#
#

[tool.cibuildwheel]
# Here we install desired libraries for their build dependencies, then use vcpkg to update to latest files from vcpkg.json
before-all = "(yum install -y boost-devel bzip2-devel eigen3-devel zip unzip || apt-get install -y libboost-all-dev libbz2-dev libeigen3-dev zip unzip) && git clone https://github.com/microsoft/vcpkg.git /opt/vcpkg && /opt/vcpkg/bootstrap-vcpkg.sh -disableMetrics && /opt/vcpkg/vcpkg install"
# We enable dynamo VCPKG integration using the environment variable.
environment = {VCPKG_ROOT="/opt/vcpkg/"}
# Skip the pypy builds (they're deprecated anyhoo)
skip = "pp*"
#build-frontend = "build[uv]"
#test-command = "pytest {project}/tests"
#test-extras = ["test"]
