[build-system]
requires = [
  "scikit-build-core>=0.10", 
  "numpy", 
  "pytest",
]
build-backend = "scikit_build_core.build"


[project]
name = "pydynamo"
version = "0.0.1"
description="A python package for DynamO, a particle dynamics simulator"
readme = "Readme.md"
authors = [
  { name = "Marcus Bannerman", email = "m.bannerman@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GPL License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["alive-progress", "pandas", "scipy", "uncertainties", "networkx"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"


#[project.optional-dependencies]
#test = ["pytest"]

#[tool.pytest.ini_options]
#minversion = "8.0"
#addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
#xfail_strict = true
#log_cli_level = "INFO"
#filterwarnings = [
#  "error",
#  "ignore::pytest.PytestCacheWarning",
#]
#testpaths = ["tests"]
#
#

[tool.cibuildwheel]
# Skip the pypy builds (they're deprecated and use an old toolchain)
# Skip 32bit builds due to issues with build tools
# Dropping some older python versions too
skip = "pp* *i686 *win32"
# More modern install/build with uv
# Doesn't work on macos github actions! Need to install it using brew?
#build-frontend = "build[uv]"

# For future reference on a windows build
# To use VCPKG, add the environment variable
#environment = {DYNAMO_VCPKG_ROOT="/opt/vcpkg/"}
# And add this to before-all to download vcpkg
#&& git clone https://github.com/microsoft/vcpkg.git /opt/vcpkg && /opt/vcpkg/bootstrap-vcpkg.sh -disableMetrics && /opt/vcpkg/vcpkg install


[tool.cibuildwheel.linux]
# We switch to the 2025 default images now
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
before-all = "yum install -y zip unzip make boost-devel eigen3-devel bzip2-devel"

[[tool.cibuildwheel.overrides]]
# musllinux uses apk instead of yum
select = "*-musllinux*"
#install ninja-is-really-ninja, as the ninja package is a link to samurai which is incompatible with vcpkg it seems
before-all = "apk add zip unzip ninja-is-really-ninja boost-dev eigen-dev bzip2-dev"

[tool.cibuildwheel.macos]
before-all = "brew install cmake eigen boost"